--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ python-json-logger==4.0.0
 psycopg[binary]==3.3.2
 python-dotenv==1.2.1
 requests==2.32.5
-jwt==1.4.0
+PyJWT==2.10.1
+cryptography==46.0.3
