--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -8,7 +8,7 @@ patches:
   - patch: |-
       - op: replace
         path: /spec/template/spec/containers/0/image
-        value: docker.io/library/biletado-backend:latest
+        value: docker.io/library/biletado-backend:2
       - op: replace
         path: /spec/template/spec/containers/0/ports/0/containerPort
         value: 9099
