--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: biletado
+
+commonLabels:
+  app.kubernetes.io/part-of: biletado
 
 resources:
   - https://gitlab.com/biletado/kustomize.git//overlays/kind
@@ -13,13 +17,10 @@ patches:
   - patch: |-
       - op: replace
         path: /spec/template/spec/containers/0/image
-        value: docker.io/library/biletado-backend:latest
+        value: ghcr.io/felix26/biletado-backend:latest
       - op: replace
         path: /spec/template/spec/containers/0/ports/0/containerPort
         value: 9099
-      - op: replace
-        path: /spec/template/spec/containers/0/imagePullPolicy
-        value: Never
       
       - op: add
         path: /spec/template/spec/containers/0/env/-
